--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,8 +4,11 @@ repo: upptime # Your GitHub repository name
 
 # Add your sites here
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: Marketing Site
+    url: https://meetpaidly.com
+  - name: Web Application
+    url: https://app.meetpaidly.com
+
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
@@ -13,7 +16,7 @@ status-website:
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  name: Paidly Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
