feat: Attempt to style it

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,13 +15,13 @@ status-website:
   cname: status.meetpaidly.com
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://meetpaidly.com/images/logo_on_light.svg
   name: Paidly Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  favicon: https://meetpaidly.com/favicon-32x32.png
   navbar:
     - title: Status
       href: /
+  themeUrl: https://status.meetpaidly.com/paidlylight.css
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
