--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,7 +11,9 @@ sites:
   - name: Help & Support Site
     url: https://help.meetpaidly.com
   - name: API Endpoint
-    url: $API_ENDPOINT  
+    url: $API_ENDPOINT
+  - name: Test Broken Site
+    url: https://thissitedoesnotexist.koj.co
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
