--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,6 +30,8 @@ status-website:
 
 assignees:
   - shawncarr
-  
+
+robotsText: "User-agent: * \n Disallow: /"
+
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
